# codebank

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  README_MCP.md  deny.toml
.cursor/rules/: rust.mdc
.github/workflows/: build.yml
examples/: parser.rs
fixtures/: only_comments.rs  sample.c  sample.cpp  sample.go  sample.py  sample.rs  sample.ts  sample_advanced.rs  sample_enum.rs  sample_with_fields.cpp  sample_with_fields.rs
memory_bank/: activeContext.md  implementation-plan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
specs/: 0001-initial-idea.md  0002-improve.md  0003-format-trait.md  0004-simplify.md  0005-mcp.md  0006-package-file.md  instructions.md
src/: bank.rs  error.rs  lib.rs  mcp.rs
src/mcp/: mod.rs
src/parser/: formatters.rs  mod.rs  units.rs
src/parser/formatter/: mod.rs  python.rs  rules.rs  rust.rs
src/parser/lang/: c.rs  cpp.rs  go.rs  mod.rs  python.rs  rust.rs  ts.rs
