[package]
name = "codebank"
version = "0.3.1"
edition = "2024"
description = """
A powerful code documentation generator that creates structured markdown documentation from your codebase.
Supports multiple languages including Rust, Python, TypeScript, and C with intelligent parsing and formatting.
Features test code filtering, summary generation, and customizable documentation strategies.
"""
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
license = "MIT"
repository = "https://github.com/tyrchen/codebank"
documentation = "https://docs.rs/codebank"
readme = "README.md"
keywords = ["code", "documentation", "markdown", "generator", "parser"]
categories = [
  "command-line-utilities",
  "development-tools",
  "parsing",
  "text-processing",
]
exclude = ["fixtures/*", "examples/*", "tests/*", ".github/*", ".vscode/*"]

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.0", features = ["derive"] }
ignore = "0.4.23"
regex = "1.11.1"
rmcp = { version = "0.1.5", features = [
  "server",
  "transport-sse-server",
  "transport-io",
] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"

[dev-dependencies]
tempfile = "3.9"

[[bin]]
name = "cb"
path = "src/bin/codebank.rs"

[[bin]]
name = "cb-mcp"
path = "src/bin/mcp.rs"
