[package]
name = "codebank"
version = "0.4.5"
edition = "2024"
description = """
A powerful code documentation generator that creates structured markdown documentation from your codebase.
Supports multiple languages including Rust, Python, TypeScript, C, and Go with intelligent parsing and formatting.
Features test code filtering, summary generation, and customizable documentation strategies.
"""
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
license = "MIT"
repository = "https://github.com/tyrchen/codebank"
documentation = "https://docs.rs/codebank"
readme = "README.md"
keywords = ["code", "documentation", "markdown", "generator", "parser"]
categories = [
  "command-line-utilities",
  "development-tools",
  "parsing",
  "text-processing",
]
exclude = ["fixtures/*", "examples/*", "tests/*", ".github/*", ".vscode/*"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"], optional = true }
ignore = "0.4.23"
regex = "1.11.1"
rmcp = { version = "0.1.5", features = [
  "server",
  "transport-sse-server",
  "transport-io",
], optional = true }
schemars = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
], optional = true }
tokio-util = { version = "0.7", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
], optional = true }
tree-sitter = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"

[dev-dependencies]
tempfile = "3.19"

[features]
default = ["cli", "mcp"]
cli = ["clap", "tracing-subscriber"]
mcp = ["rmcp", "schemars", "tokio", "tokio-util"]

[[bin]]
name = "cb"
path = "src/bin/codebank.rs"
required-features = ["cli"]

[[bin]]
name = "cb-mcp"
path = "src/bin/mcp.rs"
required-features = ["cli", "mcp"]
